# dc

./: .gitignore  8麦克风圆阵音频侧融合模型实现文档.md  README.md  pyproject.toml  smp.py  代码实现轮子与最佳实践建议.md  当前落地总技术架构文档.md  数据集特征与技术文档结合可行性分析.md  模型层面技术文档.md
ElegantPaper-master/: .gitignore  elegantpaper-cn.tex  reference.bib
QA/: RealMAN数据集特征与Baseline.md  TCN是什么.md  当前定位方式和TDOA关系.md  当前整体架构.md  申报书最小闭环与任务裁剪.md  论文完成执行计划.md  论文故事线与实验结果规划.md
configs/: config.yaml  realman_ring1_big_loc_strong.yaml  realman_ring1_loc_strong.yaml  realman_ring1_mvp.yaml  realman_ring2_ablation_logmel.yaml  realman_ring2_ablation_logmel_ipd.yaml  realman_ring2_ablation_logmel_ipd_srp.yaml  realman_ring2_ablation_logmel_srp.yaml  realman_ring2_demo.yaml  realman_ring2_hybrid.yaml  realman_ring2_localization_only.yaml  realman_ring2_multisource_count.yaml  realman_ring2_mvp.yaml
paper/: main.aux  main.bbl  main.blg  main.out  main.tex
scripts/: animate_trained_scene.py  demo_realman_ring2.py  evaluate_future_prediction.py  evaluate_realman_baseline_metrics.py  plot_arch_pro.py  plot_field_figures.py  plot_high_density_viz.py  plot_impact_figures.py  plot_impact_figures_pro.py  plot_paper_figures.py  plot_paper_figures_nature.py  plot_standard_figures.py  plot_subfigures.py  plot_trajectory_example.py  prepare_realman_ring1_9ch.py  prepare_realman_ring2_8ch.py  simulate_trained_scene.py  train.py  visualize_probe_comparison.py  visualize_realman_run.py  warm_audio_cache.py  warm_sample_cache.py  watch_realman_ring2_8ch.py
tests/: test_audio_io.py  test_geometry.py  test_heatmap_counter.py  (+6 more)
大创/: py.py  (+9 more)
(+77 files in other folders)
