[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "uca8-tracktrend"
version = "0.1.0"
description = "8-microphone circular-array source tracking and short-horizon trend prediction scaffold."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Proprietary" }
authors = [
  { name = "Codex" },
]
dependencies = [
  "torch>=2.6",
  "torchcodec>=0.7",
  "torchaudio>=2.8",
  "numpy>=2.0",
  "scipy>=1.13",
  "matplotlib>=3.9",
  "hydra-core>=1.3",
  "lightning>=2.5",
  "torchmetrics>=1.6",
  "rich>=13.9",
]

[project.optional-dependencies]
sim = [
  "pyroomacoustics>=0.7",
]
exp = [
  "wandb>=0.19",
]

[dependency-groups]
dev = [
  "mypy>=1.15",
  "pytest>=8.3",
  "ruff>=0.11",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["src/uca8"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true
disallow_untyped_defs = true
no_implicit_optional = true
exclude = ["tests"]
